codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_wide.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  149 actions, 0 customized, 5 unbound.

   All   Common   Customized (0)   Unbound (5)   App   Composer   Editor   Vim   Navigation   Agents   Approval      ›

  Type to search shortcuts

› Global       - Open Agents                unbound
  Global         Open Transcript            ctrl-t
  Global         Find Transcript            f3
  Global         Focus Activity             f4
  Global         Open External Editor       ctrl-g
  Global         Copy                       ctrl-o
  Global         Clear Terminal             ctrl-l
  Global       - Toggle Vim Mode            unbound
  Global         Toggle Raw Output          alt-r
  Global         Toggle Side Conversation   ctrl-/
  Chat           Interrupt Turn             esc
  Chat           Decrease Reasoning Effort  alt-,, shift-down
  Chat           Increase Reasoning Effort  alt-., shift-up
  Chat         - Previous Permission Mode   unbound
  Chat         - Next Permission Mode       unbound
  Chat           Edit Queued Message        shift-left, alt-up
  Chat           Prompt Stack Back          shift-right, alt-down
  Chat           Skip Question              ctrl-]
  Composer       Submit                     enter
  Composer       Queue                      tab
  Composer       Toggle Shortcuts           ?, shift-?
  Composer       History Search Previous    ctrl-r
  Composer       History Search Next        ctrl-s
  Editor         Insert Newline             ctrl-j, ctrl-m, enter, shift-enter, alt-enter
↓
  left/right group · enter edit shortcut · * custom · - unbound · esc close
